[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/midi/MidiPlayer.gd" type="Script" id=1]
[ext_resource path="res://scripts/rhythm_test.gd" type="Script" id=2]
[ext_resource path="res://audio/music/test_theme.ogg" type="AudioStream" id=3]
[ext_resource path="res://scenes/note_catcher.tscn" type="PackedScene" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )
midi_file = "res://audio/music/test_theme.mid"
testing = true

[node name="MidiPlayer" type="Node" parent="."]
script = ExtResource( 1 )
file = "res://audio/music/test_theme.mid"
load_all_voices_from_soundfont = false
sequence_per_seconds = 160

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Buttons" type="Node2D" parent="."]

[node name="left_catcher" parent="Buttons" instance=ExtResource( 4 )]
modulate = Color( 0.745098, 0.745098, 0.745098, 1 )
position = Vector2( 150, 159 )
color = Color( 0.67451, 0.00784314, 0.886275, 1 )

[node name="up_catcher" parent="Buttons" instance=ExtResource( 4 )]
modulate = Color( 0.745098, 0.745098, 0.745098, 1 )
position = Vector2( 250, 160 )
color = Color( 0.027451, 0.596078, 0.25098, 1 )

[node name="Timer" type="Timer" parent="."]
